--- a/Artzy - Web/header&footer/style.css
+++ b/Artzy - Web/header&footer/style.css
@@ -421,7 +421,7 @@ body{
 
 
     .dp{
-        left: 85.8rem;
+        left: 82.8rem;
         margin-left: 0;
     }
     .menu_ li {
@@ -574,6 +574,31 @@ body{
     #menu-b{
         margin-left: 0.4rem;
     }
+
+    .autocomplete-results {
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        max-height: 200px;
+        overflow-y: auto;
+        z-index: 1000;
+      }
+      
+      .autocomplete-item {
+        padding: 10px;
+        cursor: pointer;
+      }
+      
+      .autocomplete-item:hover {
+        background-color: #f0f0f0;
+      }
+      
+      .autocomplete-results img {
+        width: 30px;
+        height: 30px; 
+        border-radius: 50%; 
+        margin-right: 10px; 
+      }
 
 
 }
