--- a/Artzy - Web/header&footer/style2.css
+++ b/Artzy - Web/header&footer/style2.css
@@ -578,25 +578,25 @@ body{
   
 }
 
-.scrollbar {
+.scrollbar2 {
   overflow-y: scroll;
 }
 
-.scrollbar::-webkit-scrollbar {
+.scrollbar2::-webkit-scrollbar {
   width: 19px;
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
+.scrollbar2::-webkit-scrollbar-thumb {
   background-color: #e8a542; 
   border: 0.48em solid #3d2828; 
   border-radius: 2rem; 
 }
 
-.scrollbar::-webkit-scrollbar-thumb:hover {
+.scrollbar2::-webkit-scrollbar-thumb:hover {
   background-color: #e8a642b7; 
 }
 
-.scrollbar::-webkit-scrollbar-track{
+.scrollbar2::-webkit-scrollbar-track{
   border-radius: 3rem;
   margin-top: 1.9rem;
   margin-bottom: 1.6rem;
